GH-106 Custom exceptions, SonarLint fixes, and code readability enhancement. (#106)
* Use custom exception, fix issues by SonarLint

* Fix checkstyle issues.

* Follow reviewers suggestions

* Set continuation indent to 4

* Follow rollczi suggestions

* Add @FunctionalInterface